--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bin"]
 	path = bin
-	url = git://github.com/nubisproject/nubis-wrapper.git
+	url = https://github.com/nubisproject/nubis-wrapper.git
